[package]
name = "docan"
version = "0.1.0-b1"
edition = "2021"
license = "MIT OR GPL-3.0"
authors = ["Jesse Smith <jesses2025smith@gmail.com>"]
description = "A DoCAN protocol."
homepage = "https://github.com/jesses2025smith/docan-rs"
repository = "https://github.com/jesses2025smith/docan-rs"
keywords = [
    "automotive",
    "UDS",
    "DoCAN"
]

[features]
default = ["std2020", "client", "server"]

client = ["iso15765-2/can", "iso15765-2/std2004"]
server = ["iso15765-2/can", "iso15765-2/std2004", "rand", "serde", "serde_yaml"]

std2006 = ["iso14229-1/std2006"]
std2013 = ["iso14229-1/std2013"]
std2020 = ["iso14229-1/std2020"]

[lib]
crate-type = ["lib", "cdylib", ]
name = "docan_rs"

[dependencies]
async-trait = "0.1"
bytes = "1.10"
hex = "0.4"
log = "0.4"
rs-can = "0.3.0-b0"
rsutil = { version = "0.1", features = ["log", "types"] }
thiserror = "2"
tokio = { version = "1", features = ["time", "fs"] }

[dependencies.iso14229-1]
path = "../iso-std-rs/iso14229-1"
version = "0.1.0-b1"
default-features = false
optional = true

[dependencies.iso15765-2 ]
path = "../iso-std-rs/iso15765-2"
version = "0.1.0-b1"
default-features = false

[dependencies.rand]
version = "0.9"
optional = true

[dependencies.serde]
version = "1"
optional = true

[dependencies.serde_yaml]
version = "0.9"
optional = true

[dev-dependencies]
anyhow = "1"
futures = "0.3"
scopeguard = "1.2"
socketcan-rs = { version = "0.3.0-b0" }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
